# poc-lineage-extract

./: .env  .gitignore  README.md  docker-compose.yml  ingest_lineage.py  main.py  pyproject.toml
sharepoint_ingestion/: .coverage  databricks.yml  pyproject.toml
sharepoint_ingestion/docs/: Implementation_Plan_SharePoint_Ingestion.md  SharePoint_Ingestion_Confluence.md  SharePoint_Ingestion_Developer_Guide.md  SharePoint_Ingestion_Technical_Doc.md
sharepoint_ingestion/resources/: sharepoint_ingestion_job.yml
sharepoint_ingestion/setup/: sp_delta_token.sql
sharepoint_ingestion/sharepoint_ingestion/: auth.py  entrypoint.py  graph.py  job.py  setup_sp.py  storage.py
sharepoint_ingestion/tests/: conftest.py  test_auth.py  test_graph.py  test_job.py  test_storage.py
