[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sharepoint_ingestion"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "msal>=1.28",
    "requests>=2.31",
    "fsspec>=2023.6",
    "loguru>=0.7",
]

[project.optional-dependencies]
# Install when writing to Azure Data Lake Storage Gen2 (abfss:// paths):
#   pip install sharepoint_ingestion[adls]
adls = ["adlfs>=2024.2"]

[project.scripts]
# 'run' kept for backward-compat; 'ingest' is the production Databricks entry point
run = "sharepoint_ingestion.job:run"
ingest = "sharepoint_ingestion.entrypoint:main"

[tool.setuptools.packages.find]
include = ["sharepoint_ingestion*"]

# ── Dev dependencies (uv) ─────────────────────────────────────
[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sharepoint_ingestion --cov-report=term-missing --cov-fail-under=100"

# ── Coverage ──────────────────────────────────────────────────
[tool.coverage.run]
source = ["sharepoint_ingestion"]
branch = true
omit = ["sharepoint_ingestion/entrypoint.py"]  # Databricks-only; untestable without runtime

[tool.coverage.report]
fail_under = 100
show_missing = true

# ── Ruff — linting & formatting ───────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
